--- a/app.yaml
+++ b/app.yaml
@@ -1,11 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: splash
-  namespace: argo-cd
+  name: crevillo
+  namespace: argocd
 spec:
   destination:
-    namespace: argo-cd
+    namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
     path: apps
