--- a/apps/config/nginx-ingress.yaml
+++ b/apps/config/nginx-ingress.yaml
@@ -2,8 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: example-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+  namespace: argocd
 spec:
   rules:
     - host: hello-world.info
