--- a/apps/config/nginx-service.yaml
+++ b/apps/config/nginx-service.yaml
@@ -6,9 +6,8 @@ metadata:
   labels:
     run: nginx
 spec:
+  type: NodePort 
   ports:
   - port: 80
-    targetPort: 80
-    protocol: TCP
   selector:
     run: nginx
