--- a/apps/config/nginx-deployment.yaml
+++ b/apps/config/nginx-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: nginx
   namespace: argocd
   labels:
     app: nginx
