--- a/apps/config/nginx-deployment.yaml
+++ b/apps/config/nginx-deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
-  namespace: argocd
+  name: nginx-deployment
+  namespace: nginx
   labels:
-    app: nginx
+    name: nginx
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      name: nginx
+  replicas: 3
   template:
     metadata:
       labels:
-        app: nginx
+        name: nginx
     spec:
       containers:
       - name: nginx
