--- a/apps/config/nginx-service.yaml
+++ b/apps/config/nginx-service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-nginx
-  namespace: argocd
-  labels:
-    run: nginx
+  name: nginx-service
+  namespace: nginx
 spec:
-  selector:
-    app: nginx
-    tier: backend
+  type: LoadBalancer
   ports:
-  - protocol: TCP
-    port: 85
-    targetPort: http
+  - name: http
+    port: 80
+  selector:
+    name: nginx
+
