--- a/values/consul.yaml
+++ b/values/consul.yaml
@@ -1,5 +1,8 @@
 consul:
   replicaCount: 5
+  service:
+    type: LoadBalancer
+    port: 81
   ingress:
     enabled: true
     hostname: consul.splashdevelop.eu
