--- a/apps/config/prometheus.yaml
+++ b/apps/config/prometheus.yaml
@@ -1,19 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: postgres
+  name: prometheus
 spec:
   destination:
-    namespace: postgres
+    namespace: pprometheus
     server: 'https://kubernetes.default.svc'
   source:
-    path: packages/postgres
+    path: packages/prometheus
     repoURL: 'https://github.com/crevillo/argocd.git'
     targetRevision: HEAD
     helm:
       version: v3
       valueFiles:
-        - ../../values/postgres.yaml
+        - ../../values/prometheus.yaml
   project: default
   syncPolicy:
     automated:
