--- a/apps/config/prometheus.yaml
+++ b/apps/config/prometheus.yaml
@@ -4,7 +4,7 @@ metadata:
   name: prometheus
 spec:
   destination:
-    namespace: pprometheus
+    namespace: prometheus
     server: 'https://kubernetes.default.svc'
   source:
     path: packages/prometheus
