--- a/packages/ingress-nginx/values.yaml
+++ b/packages/ingress-nginx/values.yaml
@@ -1,1 +1,14 @@
 # use defaults
+ingress-nginx:
+  controller:
+    kind: DaemonSet
+    metrics:
+      port: 10254
+      # if this port is changed, change healthz-port: in extraArgs: accordingly
+      enabled: true
+      service:
+        annotations:
+          prometheus.io/scrape: "true"
+          prometheus.io/port: "10254"
+    tolerations:
+      - operator: Exists
