--- a/apps/config/prometheus.yaml
+++ b/apps/config/prometheus.yaml
@@ -14,7 +14,7 @@ spec:
       version: v3
       valueFiles:
         - ../../values/prometheus.yaml
-  project: default
+  project: crevillo
   syncPolicy:
     automated:
       prune: false
